@@ -48,6 +48,7 @@
 * Fixed a problem with BlendLuxCore when parsing more than 9 image pipelines (#336)
 * Fixed a bug causing fireflies when using light tracing for caustics in some case (#329)
 * Fixed a crash when using RemoveUnusedTextures() with Volumes (issue #377)
+* Fixed a banding problem when using sphere light sources with very small radius (issue LuxCoreRender/BlendLuxCore#477)
 
 Note: due to Glossycoating updated support for bump mapping on GPUs, some old scene using this kind of material/bump map combination may require some fix.
 
